--- a/main/templates/home.html
+++ b/main/templates/home.html
@@ -2,7 +2,7 @@
 {% block body %}
 	<div class="row">
 		<div class="col-md-8 main-img-holder">
-			<img src="{{ STATIC_URL }}images/booa_main.jpg" class="img-fluid home-main-image" alt="Responsive image">
+			<img src="{{ STATIC_URL }}images/booa_main.JPG" class="img-fluid home-main-image" alt="Responsive image">
 		</div>
 		<div id="main-text" class="col-md-4">
 			<h2><strong>Bras Ouverts – Open Arms</strong></h2>
