--- a/main/templates/projects.html
+++ b/main/templates/projects.html
@@ -60,7 +60,7 @@
 		</div>
 			<div class="row">
 				<div class="col-md-5">
-					<img src="{{ STATIC_URL }}images/tree_table.JPG" class="pull-left paragraph-picture">
+					<img src="{{ STATIC_URL }}images/tree_table.jpg" class="pull-left paragraph-picture" style="margin-left: 0">
 				</div>
 				<div class="pull-right col-md-7">
 					<h2><strong>Projects &amp; Collaboration</strong></h2>
