--- a/main/templates/contact.html
+++ b/main/templates/contact.html
@@ -43,8 +43,8 @@
 				Atlantique Department <br />
 				Benin <br />
 				<br />
-				<div><i class="glyphicon glyphicon-earphone"></i> PHONE</div>
-				<div><i class="glyphicon glyphicon-envelope"></i> EMAIL</div>
+				<div><i class="glyphicon glyphicon-earphone"></i> (630) 589-6023</div>
+				<div><i class="glyphicon glyphicon-envelope"></i> brasouvertsopenarms@gmail.com</div>
 				<br />
 				You can also find us on <a href="https://www.facebook.com/brasouvertsopenarms/"><strong>Facebook</strong></a>
 			</div>
