change vision pic

--- a/static/css/booa.css
+++ b/static/css/booa.css
@@ -109,6 +109,7 @@ div.bacground-page h3 {
 	height: 450px;
 	margin-top: -115px;
 	border-radius: 4px;
+    background-position: 50% 50%;
 }
 
 .main-text{
