new donate button links

--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -22,7 +22,7 @@
 								<li {% if tab == "team" %} class="active" {% endif %}><a href="{{ url_for('main.team') }}">Team</a></li>
 								<li {% if tab == "contribute" %} class="active" {% endif %}><a href="{{ url_for('main.contribute') }}">Contribute</a></li>
 								<li {% if tab == "contact" %} class="active" {% endif %}><a href="{{ url_for('main.contact') }}">Contact</a></li>
-								<li><a href="https://www.paypal.me/BOOA/50">Donate</a></li>
+								<li><a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=2PWH9NN5V9DZY">Donate</a></li>
 							</ul>
 						</div>
 					</div>
