--- a/main/templates/contribute.html
+++ b/main/templates/contribute.html
@@ -7,7 +7,7 @@
 				<h2><strong>Opportunities to contribute</strong></h2>
 				Financial and in-kind support is greatly appreciated! We are always open to new ideas, potential partnerships and volunteers.
 				<div class="text-center top-space-small">
-	  				<a href="https://www.paypal.me/BOOA/50" type="button" class="btn btn-info btn-lg">Donate</a>
+	  				<a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=2PWH9NN5V9DZY" type="button" class="btn btn-info btn-lg">Donate</a>
 				</div>
 				<div class="top-space-small">
 					Please feel free to contact us if you are interested in other donation options and opportunities.
