css changes and increase form size

--- a/main/templates/contribute.html
+++ b/main/templates/contribute.html
@@ -31,25 +31,25 @@
 			<p>One Million Lights solicits donations and provides solar lamps.</p>
 		</div>
 	</div>
-	<div class="row text-center top-space-small" id="supporters">
+	<div class="row text-center top-space-small right-space left-space" id="supporters">
 		<h2><strong>Supporters</strong></h2>
 	</div>
-	<div class="row text-center">
+	<div class="row text-center right-space left-space">
 		<div class="col-md-4 text-center">University of California at Los Angeles (UCLA) School of Law</div>
 		<div class="col-md-4 text-center">Graduate Institute of International and Development Studies</div>
 		<div class="col-md-4 text-center">Aminata Lemdjou</div>
 	</div>
-	<div class="row text-center top-space-small" id="supporters">
+	<div class="row text-center top-space-small right-space left-space" id="supporters">
 		<div class="col-md-4 text-center">Diane Legbagah Enonfondé</div>
 		<div class="col-md-4 text-center">Gabriel Martinez</div>
 		<div class="col-md-4 text-center">Craig Hill</div>
 	</div>
-	<div class="row text-center top-space-small" id="supporters">
+	<div class="row text-center top-space-small right-space left-space" id="supporters">
 		<div class="col-md-4 text-center">Vicky Bush-Joseph</div>
 		<div class="col-md-4 text-center">Aline Gertrude Silvis</div>
 		<div class="col-md-4 text-center">Ray Oglesby</div>
 	</div>
-	<div class="row text-center top-space-small" id="supporters">
+	<div class="row text-center top-space-small right-space left-space" id="supporters">
 		<div class="col-md-4 text-center">James Smyth</div>
 		<div class="col-md-4 text-center">Craig Hill</div>
 		<div class="col-md-4 text-center">Gabriel Martinez</div>
