add video and space

--- a/main/templates/projects.html
+++ b/main/templates/projects.html
@@ -3,24 +3,34 @@
 	<div class="container-fluid left-space right-space">
 		<h2 style="margin-bottom: 0"><strong>Priorities</strong></h2>
 		<div class="row">
-			<div class="col-md-4">
-				<h3>NGO Registration</h3>
-				<ul>
-					<li>
-						We are in the process of registering with the Beninese Government and expect 
-						to have official non-governmental organization status by 2017.
-					</li>
-				</ul>
+			<div class="col-md-6">
+				<div class="col-md-6">
+					<h3>NGO Registration</h3>
+					<ul>
+						<li>
+							We are in the process of registering with the Beninese Government and expect 
+							to have official non-governmental organization status by 2017.
+						</li>
+					</ul>
+				</div>
+				<div class="col-md-6">
+					<h3>Research</h3>
+					<ul>
+						<li>
+							We will continue to analyze the root causes underlying the marginalization of BOOA’s stakeholders and
+						</li>
+						<li>
+							Identify partners who can help us to implement solutions for these challenges.
+						</li>
+					</ul>
+				</div>
 			</div>
-			<div class="col-md-4">
-				<h3>Sustainable Financing</h3>
-				<ul>
-					<li>
-						We seek to generate enough income to finance our teachers’ salaries by the end of the 2016 – 2017 school year.
-					</li>
-				</ul>
+			<div class="col-md-6 text-center">
+				<iframe width="460" height="315" src="https://www.youtube.com/embed/JUcUtLc46Sw" frameborder="0" allowfullscreen></iframe>
 			</div>
-			<div class="col-md-4">
+		</div>
+		<div class="col-md-12 top-space-small">
+			<div class="col-md-5">
 				<h3>Education Enhancement</h3>
 				<ul>
 					<li>
@@ -28,20 +38,19 @@
 					</li>
 				</ul>
 			</div>
-		</div>
-		<div class="row">
-			<div class="col-md-4">
-				<h3>Research</h3>
+			<div class="col-md-1"></div>
+			<div class="col-md-5">
+				<h3>Sustainable Financing</h3>
 				<ul>
 					<li>
-						We will continue to analyze the root causes underlying the marginalization of BOOA’s stakeholders and
-					</li>
-					<li>
-						Identify partners who can help us to implement solutions for these challenges.
+						We seek to generate enough income to finance our teachers’ salaries by the end of the 2016 – 2017 school year.
 					</li>
 				</ul>
 			</div>
-			<div class="col-md-4">
+			<div class="col-md-1"></div>
+		</div>
+		<div class="col-md-12">
+			<div class="col-md-5">
 				<h3>Increase Enrollment</h3>
 				<ul>
 					<li>
@@ -49,7 +58,8 @@
 					</li>
 				</ul>
 			</div>
-			<div class="col-md-4">
+			<div class="col-md-1"></div>
+			<div class="col-md-5">
 				<h3>Ensure Project Endurance</h3>
 				<ul>
 					<li>
@@ -57,8 +67,9 @@
 					</li>
 				</ul>
 			</div>
+			<div class="col-md-1"></div>
 		</div>
-			<div class="row">
+			<div class="row top-space-small">
 				<div class="col-md-5">
 					<img src="{{ STATIC_URL }}images/tree_table.jpg" class="pull-left paragraph-picture" style="margin-left: 0">
 				</div>
