changes to page formats and new images

--- a/main/templates/background.html
+++ b/main/templates/background.html
@@ -1,22 +1,33 @@
 {% extends "base.html" %}
 {% block body %}
-	<div class="container-fluid">
+	<div class="container-fluid background-page">
 		<div class="row bottom-space">
-			<div class="main-text bacground-page ">
-				<img src="{{ STATIC_URL }}images/benin_google_map.png" class="pull-right paragraph-picture">
-				<h3><strong>In 2010. . .</strong></h3>
-				<p>
-					Remedy Sueza started teaching because his community needed him. After fleeing violent conflicts arising from destructive oil drilling in Nigeria, Remedy and thousands of others sought refuge in Ouidah, Benin. Lacking French language skills and facing local discrimination, the refugee community needed educational opportunities for their children, and Remedy took up the charge.
-				</p>
-				<p>
-					When two foreign students, Jan Pieter and Clara, heard about Remedy’s school while volunteering nearby in november 2014, they resolved to help institutionalize the informal effort. Since then, they have dedicated themselves to establishing the school and have set up a strong local and international team. Thus, the project mission is to form a school-based hub for education, sustainable farming, healthcare and technology. 
-				</p>
-				<br />
-				<h3><strong>Ouidah, Benin</strong></h3>
-				<p>
-					Ouidah is a small city on the southern coast of Benin, known for its historical role in the slave trade and Vodoun culture. The capital, Cotonou, is about an one hour drive away. In keeping with national circumstances, Ouidah is ethnically diverse and economically impoverished. In practical terms, this means that schools are overcrowded and unemployment is high. French is the official language of Benin, though many locals speak Fon, Yoruba and a number of other tribal languages. Remedy and the other displaced Nigerians speak English, and therefore struggle to communicate with locals.
-				</p>
-				<img src="{{ STATIC_URL }}images/ouidah_map.png" class="center-block">
+			<div class="main-text">
+				<div class="row">
+					<img src="{{ STATIC_URL }}images/benin_google_map.png" class="pull-right paragraph-picture">
+					<h3><strong>In 2010. . .</strong></h3>
+					<p>
+						Remedy Sueza started teaching because his community needed him. After fleeing violent conflicts arising from destructive oil drilling in Nigeria, Remedy and thousands of others sought refuge in Ouidah, Benin. Lacking French language skills and facing local discrimination, the refugee community needed educational opportunities for their children, and Remedy took up the charge.
+					</p>
+					<p>
+						When two foreign students, Jan Pieter and Clara, heard about Remedy’s school while volunteering nearby in november 2014, they resolved to help institutionalize the informal effort. Since then, they have dedicated themselves to establishing the school and have set up a strong local and international team. Thus, the project mission is to form a school-based hub for education, sustainable farming, healthcare and technology. 
+					</p>
+				</div>
+				<div class="row top-space-small">
+					<div class="col-md-6">
+						<img src="{{ STATIC_URL }}images/booa_cow.jpg" class="center-block" height=350>
+					</div>
+					<div class="col-md-6">
+						<img src="{{ STATIC_URL }}images/booa_market.jpg" class="pull-left left-space-tiny" height=350>
+					</div>
+				</div>
+				<div class="row top-space-small">
+					<h3><strong>Ouidah, Benin</strong></h3>
+					<p>
+						Ouidah is a small city on the southern coast of Benin, known for its historical role in the slave trade and Vodoun culture. The capital, Cotonou, is about an one hour drive away. In keeping with national circumstances, Ouidah is ethnically diverse and economically impoverished. In practical terms, this means that schools are overcrowded and unemployment is high. French is the official language of Benin, though many locals speak Fon, Yoruba and a number of other tribal languages. Remedy and the other displaced Nigerians speak English, and therefore struggle to communicate with locals.
+					</p>
+					<img src="{{ STATIC_URL }}images/ouidah_map.png" class="center-block">
+				</div>
 			</div>
 		</div>
 	</div>
