--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -5,6 +5,7 @@
     	<link rel="stylesheet" href="{{ STATIC_URL }}bootstrap3/css/bootstrap.css">
     	<link rel="stylesheet" href="{{ STATIC_URL }}css/booa.css">
     	<link href="https://fonts.googleapis.com/css?family=Quicksand:400,700" rel="stylesheet">
+    	<link rel='shortcut icon' href='{{ STATIC_URL }}favicon.ico' type='image/x-icon'/ >
     	<script src="{{ STATIC_URL }}js/vendors/jquery.min.js"></script>
     	<script src="{{ STATIC_URL }}bootstrap3/js/bootstrap.min.js"></script>
 	</head>
