--- a/main/templates/contact.html
+++ b/main/templates/contact.html
@@ -46,7 +46,10 @@
 			</form>
 		</div>
 		<div class="col-md-6">
-			<div class="left-space-xl">
+			<div class="col-md-12">
+				<img src="{{ STATIC_URL }}images/booa_kids_outside.jpg" class="pull-left left-space-tiny" style="margin-top: -35px" height=300>
+			</div>
+			<div class="col-md-12 left-space top-space-small">
 				C/O IMPACT <br />
 				BP 131, Ouidah <br />
 				Atlantique Department <br />
@@ -54,7 +57,6 @@
 				<br />
 				<div><i class="glyphicon glyphicon-earphone"></i> (630) 589-6023</div>
 				<div><i class="glyphicon glyphicon-envelope"></i> brasouvertsopenarms@gmail.com</div>
-				<br />
 				You can also find us on <a href="https://www.facebook.com/brasouvertsopenarms/"><strong>Facebook</strong></a>
 			</div>
 		</div>
