--- a/main/templates/projects.html
+++ b/main/templates/projects.html
@@ -29,49 +29,48 @@
 				<iframe width="460" height="315" src="https://www.youtube.com/embed/JUcUtLc46Sw" frameborder="0" allowfullscreen></iframe>
 			</div>
 		</div>
-		<div class="col-md-12 top-space-small">
-			<div class="col-md-5">
-				<h3>Education Enhancement</h3>
-				<ul>
-					<li>
-						We will continue to diversify our teaching methods and incorporate technology into the curriculum.
-					</li>
-				</ul>
+		<div class="row">
+			<div class="col-md-6">
+				<div class="col-md-6">
+					<h3>Education Enhancement</h3>
+					<ul>
+						<li>
+							We will continue to diversify our teaching methods and incorporate technology into the curriculum.
+						</li>
+					</ul>
+				</div>
+				<div class="col-md-6">
+					<h3>Sustainable Financing</h3>
+					<ul>
+						<li>
+							We seek to generate enough income to finance our teachers’ salaries by the end of the 2016 – 2017 school year.
+						</li>
+					</ul>
+				</div>
+				<div class="col-md-6">
+					<h3>Increase Enrollment</h3>
+					<ul>
+						<li>
+							We strive to enroll 50 children by June 2017 (up from about 30 in September 2016).
+						</li>
+					</ul>
+				</div>
+				<div class="col-md-6">
+					<h3>Ensure Project Endurance</h3>
+					<ul>
+						<li>
+							We will recruit new volunteers to help carry on BOOA’s mission in the long-term.
+						</li>
+					</ul>
+				</div>
 			</div>
-			<div class="col-md-1"></div>
-			<div class="col-md-5">
-				<h3>Sustainable Financing</h3>
-				<ul>
-					<li>
-						We seek to generate enough income to finance our teachers’ salaries by the end of the 2016 – 2017 school year.
-					</li>
-				</ul>
+			<div class="col-md-6 text-center top-space-large">
+				<img src="{{ STATIC_URL }}images/booa_kids_masks.jpg" width="460">
 			</div>
-			<div class="col-md-1"></div>
-		</div>
-		<div class="col-md-12">
-			<div class="col-md-5">
-				<h3>Increase Enrollment</h3>
-				<ul>
-					<li>
-						We strive to enroll 50 children by June 2017 (up from about 30 in September 2016).
-					</li>
-				</ul>
-			</div>
-			<div class="col-md-1"></div>
-			<div class="col-md-5">
-				<h3>Ensure Project Endurance</h3>
-				<ul>
-					<li>
-						We will recruit new volunteers to help carry on BOOA’s mission in the long-term.
-					</li>
-				</ul>
-			</div>
-			<div class="col-md-1"></div>
 		</div>
 			<div class="row top-space-small">
 				<div class="col-md-5">
-					<img src="{{ STATIC_URL }}images/tree_table.jpg" class="pull-left paragraph-picture" style="margin-left: 0">
+					<img src="{{ STATIC_URL }}images/tree_table.jpg" class="pull-left paragraph-picture" style="margin-left: 0; margin-top:110px">
 				</div>
 				<div class="pull-right col-md-7">
 					<h2><strong>Projects &amp; Collaboration</strong></h2>
