--- a/static/css/booa.css
+++ b/static/css/booa.css
@@ -9,8 +9,11 @@ textarea {
 }
 
 .bottom-space {margin-bottom: 50px}
+.bottom-space-small {margin-bottom: 25px}
+.top-space-large {margin-top: 75px}
 .top-space {margin-top: 50px}
 .top-space-small {margin-top: 25px}
+.left-space-tiny {margin-left: 10px}
 .left-space {margin-left: 65px}
 .left-space-xl{margin-left: 105px}
 .right-space {margin-right: 65px}
@@ -18,8 +21,8 @@ textarea {
 .right-space-xl{margin-right: 105px}
 
 #team-page-main{
-	margin-left: 115px;
-	margin-right: 115px;
+	margin-left: 135px;
+	margin-right: 135px;
 }
 .navbar-header a.active{
 	color: white;
@@ -97,12 +100,12 @@ img {
 	color: #fff;
 }
 
-div.bacground-page {
-	margin-left: 70px;
-	margin-right: 70px;
+div.background-page {
+	margin-left: 90px;
+	margin-right: 90px;
 	margin-top: 30px;
 }
-div.bacground-page h3 {
+div.background-page h3 {
 	margin-top:25px;
 }
 
@@ -129,7 +132,7 @@ div.bacground-page h3 {
 }
 
 .paragraph-picture {
-	margin: 10px 10px 10px 25px;
+	margin: 10px 0 10px 25px;
 }
 
 
