changes to contribute page

--- a/main/templates/contribute.html
+++ b/main/templates/contribute.html
@@ -10,7 +10,7 @@
 	  				<a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=2PWH9NN5V9DZY" type="button" class="btn btn-info btn-lg">Donate</a>
 				</div>
 				<div class="top-space-small">
-					Please feel free to contact us if you are interested in other donation options and opportunities.
+					Please feel free to <a href="{{ url_for('main.contact') }}">contact us</a> if you are interested in other donation options and opportunities.
 				</div>
 			</div>
 		</div>
@@ -42,11 +42,11 @@
 	<div class="row text-center top-space-small right-space left-space" id="supporters">
 		<div class="col-md-4 text-center">Diane Legbagah Enonfondé</div>
 		<div class="col-md-4 text-center">Gabriel Martinez</div>
-		<div class="col-md-4 text-center">Craig Hill</div>
+		<div class="col-md-4 text-center">Jan Kuppens</div>
 	</div>
 	<div class="row text-center top-space-small right-space left-space" id="supporters">
 		<div class="col-md-4 text-center">Vicky Bush-Joseph</div>
-		<div class="col-md-4 text-center">Aline Gertrude Silvis</div>
+		<div class="col-md-4 text-center">Gertrude Silvis</div>
 		<div class="col-md-4 text-center">Ray Oglesby</div>
 	</div>
 	<div class="row text-center top-space-small right-space left-space" id="supporters">
