text change and picture gap

--- a/main/templates/home.html
+++ b/main/templates/home.html
@@ -6,7 +6,7 @@
 		</div>
 		<div id="main-text" class="col-md-4">
 			<h2 style="font-size: 31px;"><strong>Bras Ouverts – Open Arms</strong></h2>
-			The main goal of Bras Ouverts – Open Arms (BOOA) is to establish a sustainably financed school that provides free education in Ouidah, Benin. Since women and girls are especially vulnerable to suffering as a result of displacement and poverty, a central tenet of BOOA’s mission is to prioritize the needs of females in the community through education and empowerment.
+			The main goal of Bras Ouverts – Open Arms (BOOA) is to establish a sustainably financed school that provides free education in Ouidah, Benin. BOOA serves a community of Nigerian refugees who fled environmental destruction, as well as marginalized Beninese children. In particular, we prioritize the education and empowerment of women and girls.
 		</div>
 	</div>
 {% endblock %}
