--- a/main/templates/vision.html
+++ b/main/templates/vision.html
@@ -8,7 +8,7 @@
 			<div class="text-container main-text">
 				<h2><strong>Education centered development</strong></h2>
 				<p>
-					The main goal of Bras Ouverts – Open Arms (BOOA) is to establish a sustainably financed school that provides free education in Ouidah, Benin. Since women and girls are especially vulnerable to suffering as a result of displacement and poverty, a central tenet of BOOA’s mission is to prioritize the needs of females in the community through education and empowerment. 
+					The main goal of Bras Ouverts – Open Arms (BOOA) is to establish a sustainably financed school that provides free education in Ouidah, Benin. BOOA serves a community of Nigerian refugees who fled environmental destruction, as well as marginalized Beninese children. In particular, we prioritize the education and empowerment of women and girls. 
 				</p>
 				<p>
 					Ultimately, the BOOA team seeks to prepare students for future employment so that they may live stable and fulfilling lives. To achieve this vision, we utilize an integrated approach that is comprised of five main components:
