adding logs and images, removing containers for bad bootstrap

--- a/main/templates/background.html
+++ b/main/templates/background.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% block body %}
-	<div class="container-fluid background-page">
+	<div class="background-page">
 		<div class="row bottom-space">
 			<div class="main-text">
 				<div class="row">
@@ -26,7 +26,7 @@
 					<p>
 						Ouidah is a small city on the southern coast of Benin, known for its historical role in the slave trade and Vodoun culture. The capital, Cotonou, is about an one hour drive away. In keeping with national circumstances, Ouidah is ethnically diverse and economically impoverished. In practical terms, this means that schools are overcrowded and unemployment is high. French is the official language of Benin, though many locals speak Fon, Yoruba and a number of other tribal languages. Remedy and the other displaced Nigerians speak English, and therefore struggle to communicate with locals.
 					</p>
-					<img src="{{ STATIC_URL }}images/ouidah_map.png" class="center-block top-space">
+					<img src="{{ STATIC_URL }}images/ouidah_map.png" class="center-block">
 				</div>
 			</div>
 		</div>
