--- a/main/templates/projects.html
+++ b/main/templates/projects.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% block body %}
-	<div class="container-fluid left-space right-space">
+	<div class="left-space right-space">
 		<h2 style="margin-bottom: 0"><strong>Priorities</strong></h2>
 		<div class="row">
 			<div class="col-md-6">
