--- a/main/templates/team.html
+++ b/main/templates/team.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% block body %}
-	<div class="container-fluid" id="team-page-main">
+	<div id="team-page-main">
 		<div class="row bottom-space">
 
 			<img src="{{ STATIC_URL }}images/team/remedy.png" class="team-img pull-left" width="195">
