add myself to booa

--- a/main/templates/team.html
+++ b/main/templates/team.html
@@ -81,4 +81,15 @@
 				</p>
 			</div>
 		</div>
+		<div class="row bottom-space">
+			<img src="{{ STATIC_URL }}images/team/chris.jpg" class="team-img pull-right" width="195">
+			<div class="pull-right right-space top-space text-right col-md-6">
+				<h3 class="name-heading"><strong>Chris Moirano</strong></h3>
+				<h4 class="team-title"><i>Technology Cosultant</i></h4>
+				<p>
+					Graduate of Marquette University College of Business Administration. Currently working as
+					a software engineer at Procured Health and for BOOA.
+				</p>
+			</div>
+		</div>
 {% endblock %}
