add links for organizations

--- a/main/templates/contribute.html
+++ b/main/templates/contribute.html
@@ -34,7 +34,7 @@
 				<img src="{{ STATIC_URL }}images/logos/roomie.png">
 			</div>
 			<div class="col-md-9 text-left bottom-space-small">
-				Rumie is a registered nonprofit in both the USA and Canada, and it supplies affordable tablets for refugees. BOOA uses six Rumie tablets at the school.
+				<a href="https://www.rumie.org/">Rumie</a> is a registered nonprofit in both the USA and Canada, and it supplies affordable tablets for refugees. BOOA uses six Rumie tablets at the school.
 			</div>
 		</div>
 		<div class="row">
@@ -42,7 +42,7 @@
 				<img src="{{ STATIC_URL }}images/logos/logo_oml.png">
 			</div>
 			<div class="col-md-9 text-left bottom-space-small">
-				One Million Lights is a Palo Alto based nonprofit that fundraises and distributes solar lights. BOOA’s light solicitation can be viewed here.
+				One Million Lights is a Palo Alto based nonprofit that fundraises and distributes solar lights. BOOA’s light solicitation can be viewed <a href="http://onemillionlights.org/blog/2016/09/23/brighten-up-bras-ouverts-open-arms-a-school-in-benin/">here</a>.
 			</div>
 		</div>
 		<div class="row">
@@ -50,7 +50,7 @@
 				<img src="{{ STATIC_URL }}images/logos/cerc_social.png">
 			</div>
 			<div class="col-md-9 text-left bottom-space-small">
-				Cercle Social is a registered nonprofit in Texas that sponsors four high schools in Benin. CS is helping to connect BOOA students with higher education opportunities because our English first language students cannot attend French only public schools.
+				<a href="https://www.cerclesocial.org/">Cercle Social</a> is a registered nonprofit in Texas that sponsors four high schools in Benin. CS is helping to connect BOOA students with higher education opportunities because our English first language students cannot attend French only public schools.
 			</div>
 		</div>
 		<div class="row">
@@ -58,7 +58,7 @@
 				<img src="{{ STATIC_URL }}images/logos/ucla.jpg">
 			</div>
 			<div class="col-md-9 text-left bottom-space-small">
-				The UCLA School of Law sponsors Kathleen Bush-Joseph’s Public Service Law Fellowship with BOOA. We are developing opportunities for UCLA Law students to intern at BOOA the summer of 2017.
+				The UCLA <a href="https://law.ucla.edu/">School of Law</a> sponsors Kathleen Bush-Joseph’s Public Service Law Fellowship with BOOA. We are developing opportunities for UCLA Law students to intern at BOOA the summer of 2017.
 			</div>
 		</div>
 		<div class="row">
@@ -66,7 +66,7 @@
 				<img src="{{ STATIC_URL }}images/logos/beeck.png">
 			</div>
 			<div class="col-md-9 text-left bottom-space-small">
-				BOOA is formulating an intern placement plan for the summer of 2018 with Georgetown University’s Beeck Center for Social Impact and Innovation.
+				BOOA is formulating an intern placement plan for the summer of 2018 with Georgetown University’s <a href="http://beeckcenter.georgetown.edu/">Beeck Center</a> for Social Impact and Innovation.
 			</div>
 		</div>
 		<div class="row">
@@ -74,7 +74,7 @@
 				<img src="{{ STATIC_URL }}images/logos/iheid.png">
 			</div>
 			<div class="col-md-9 text-left bottom-space-small">
-				The Swiss Graduate Institute for International and Development Studies and its Afrique Club provide BOOA with faculty mentoring and fundraising assistance.
+				The Swiss <a href="graduateinstitute.ch">Graduate Institute</a> for International and Development Studies and its Afrique Club provide BOOA with faculty mentoring and fundraising assistance.
 			</div>
 		</div>
 		<div class="row">
@@ -82,7 +82,7 @@
 				<img src="{{ STATIC_URL }}images/logos/northwestern.jpg">
 			</div>
 			<div class="col-md-9 text-left bottom-space-small">
-				BOOA is exploring solar and sanitation projects with Northwestern University’s Engineers for a Sustainable World.
+				BOOA is exploring solar and sanitation projects with Northwestern University’s <a href="http://www.eswnu.org/">Engineers for a Sustainable World</a>.
 			</div>
 		</div>
 		<div class="row">
@@ -90,7 +90,7 @@
 				<img src="{{ STATIC_URL }}images/logos/hinsdale_pl.jpg">
 			</div>
 			<div class="col-md-9 text-left bottom-space-small">
-				The Hinsdale Public Library in Illinois has donated children’s books to BOOA.
+				The <a href="http://www.hinsdalelibrary.info/">Hinsdale Public Library</a> in Illinois has donated children’s books to BOOA.
 			</div>
 		</div>
 		<div class="row">
@@ -98,7 +98,7 @@
 				<img src="{{ STATIC_URL }}images/logos/awesome_foundation.png">
 			</div>
 			<div class="col-md-9 text-left bottom-space-small">
-				The LA South Bay Chapter of the Awesome Foundation awarded BOOA its first grant in November 2016.
+				The LA South Bay Chapter of the <a href="http://www.awesomefoundation.org/en">Awesome Foundation</a> awarded BOOA its first grant in November 2016.
 			</div>
 		</div>
 	</div>
